pmm-app/src/pmm-qan/panel/components/Details/Example/ParseError/ParseError.constants.ts
export const MAX_QUERY_LENGTH_DOCS_LINK = 'TODO';
